--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,8 @@ body{
     box-sizing: border-box;
     // padding: 3rem;
     font-family: $font-family-primary;
+    overflow-x: hidden;
+
 }
 
 
