--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,4 @@
-button{
+button {
     width: 15rem;
     height: 5rem;
     background-color: $color-white;
@@ -6,32 +6,83 @@ button{
     font-weight: 700;
     color: $color-secondary;
     cursor: pointer;
-    box-shadow: 0px 5px 10px  rgba(0,0,0,0.1);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
-border: none;
-border-radius: 5px;
+    border: none;
+    border-radius: 5px;
 
 
+    @include respond(tab-land) {
+        width: 13rem;
+        font-size: 1.4rem;
+        height: 4;
+    }
+ 
 
-    
 }
 
-.btn{
-   &__oferta{
-    width: 20rem;
-    margin-top: 3rem;
-    margin-left: 5rem;
-    background-color: $color-secondary;
-    color: white;
-   }
+.btn {
+    &__oferta {
+        width: 17rem;
+        margin-top: 3rem;
+        margin-left: 5rem;
+        background-color: $color-secondary;
+        color: white;
 
-   &__despre{
-    width: 20rem;
+        @include respond(big-desktop) {
+            width: 20rem;
+            font-size: 2rem;
 
-    margin-top: 3rem;
-    margin-left: 5rem;
-    color: white;
-    background-color: $color-primary;
+        }
 
-   }
+        @include respond(tab-port) {
+            margin-top: 2rem;
+            margin-left: 3rem;
+        }
+
+
+        @include respond(phone) {
+            width: 13rem;
+            margin-top: 2rem;
+            padding-inline: 2rem;
+            margin-left: 0rem;
+        }
+    }
+
+    &__despre {
+        width: 17rem;
+        margin-top: 3rem;
+        margin-left: 5rem;
+        color: white;
+        background-color: $color-primary;
+
+        @include respond(big-desktop) {
+            font-size: 2rem;
+            width: 20rem;
+        }
+
+        @include respond(tab-port) {
+            margin-top: 2rem;
+            margin-left: 3rem;
+        }
+
+        @include respond(phone) {
+            width: 13rem;
+            margin-top: 2rem;
+            padding-inline: 2rem;
+            margin-left: 0rem;
+        }
+    }
+}
+
+
+.button__box {
+    display: flex;
+    align-items: center;
+
+    @include respond(phone) {
+        margin-top: 2rem;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
