--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -31,7 +31,12 @@
             color: rgb(232, 216, 252);
         }
 
-       
+       @include respond(tab-land){
+        font-size:1.4rem;
+       }
+       @include respond(tab-port){
+        display: none;
+       }
     }
 
     .active  {
