--- a/sass/layout/_colabs.scss
+++ b/sass/layout/_colabs.scss
@@ -1,29 +1,39 @@
-.colabs{
-    // background-color: #2c2c2c;
-    background-image:linear-gradient(355deg, #667eea 0%, #764ba2 100%);
+.colabs {
+    background-image: linear-gradient(355deg, #667eea 0%, #764ba2 100%);
     display: flex;
     flex-direction: column;
     padding-bottom: 5rem;
     clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     padding-top: 10rem;
     min-height: 90rem;
-    &__title{
-        font-size: 6rem;
+
+    &__title {
+        font-size: 5rem;
         font-weight: 800;
         font-family: $font-family-secondary;
         color: $color-white;
+
+        @include respond(tab-port) {
+
+            font-size: 3.5rem;
+        }
     }
 
-    &__describe{
+    &__describe {
         margin-top: 2rem;
         text-align: center;
         max-width: 60rem;
-        font-size: 2rem;
+        font-size: 1.6rem;
         font-weight: 400;
         font-family: $font-family-secondary;
         color: $color-white;
         margin-bottom: 5rem;
+
+        @include respond(tab-port) {
+            max-width: 70%;
+            font-size: 1.4rem;
+        }
     }
 }
