--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,92 +1,177 @@
-.hero{
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 88%, 0% 100%);
-    padding-top: 12rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: relative;
-    padding-bottom: 12rem;
+.hero {
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 88%, 0% 100%);
+  padding-top: 12rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 
-    &__text{
+  position: relative;
+  padding-bottom: 17rem;
+  width: 100%;
+
+  @include respond(tab-land) {
+    padding-top: 18rem;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 18rem;
+  }
+
+  @include respond(big-desktop) {
+    justify-content: center;
+  }
+
+
+  &__text {
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: $color-white;
-    font-size: 7rem;
     font-family: $font-family-secondary;
     font-weight: 800;
     width: 50%;
-    transform: translateY(-5rem);
-    
+
+    @include respond(tab-land) {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
     }
 
-    &__text p{
-        position: relative;
-        font-size: 7rem;
-        font-family: $font-family-secondary;
-        font-weight: 800;
+    @include respond(tab-port) {
+      width: 100%;
+    }
+  }
+
+  &__text p {
+    position: relative;
+    font-size: 5.5rem;
+    font-family: $font-family-secondary;
+    font-weight: 800;
+    color: $color-white;
+
+    &:nth-child(2) {
+      transform: translateX(8rem);
+      -webkit-text-stroke: 0.05vw $color-white;
+      color: rgba(255, 255, 255, 0.014);
+
+
+      @include respond(tab-land) {
+        transform: translateX(5rem);
+      }
+
+      @include respond(phone) {
+        transform: translateX(2rem);
+      }
+
+      &::before {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         color: $color-white;
-        &:nth-child(2){
-           transform: translateX(8rem);
-           -webkit-text-stroke: 0.05vw $color-white;
-           color: rgba(255, 255, 255, 0.014);
-           &::before{
-            content: attr(data-text);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            color: $color-white;
-            -webkit-text-stroke: 0vw $color-white;
-            border-right: 3px solid $color-secondary;
-          
-            overflow: hidden;
-            animation: animeText 6s linear infinite;
-        }
-        }
+        -webkit-text-stroke: 0vw $color-white;
+        border-right: 3px solid $color-secondary;
 
-      
+        overflow: hidden;
+        animation: animeText 6s linear infinite;
+      }
     }
 
-   &__img{
+    @include respond(big-desktop) {
+      font-size: 7rem;
+    }
+
+    @include respond(tab-land) {
+      font-size: 5rem;
+    }
+
+    @include respond(tab-port) {
+      font-size: 4.6rem;
+    }
+    @include respond(phone) {
+      font-size: 3.5rem;
+    }
+
+
+
+
+  }
+
+  &__img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 50%;
 
-    &__avatar{
-     width:80rem;
-     height: 70rem;
-    }
+    &__avatar {
+      width: 60rem;
+      height: 45rem;
+
+      @include respond(big-desktop) {
+        width: 70rem;
+        height: 50rem;
+      }
+
+      @include respond(tab-land) {
+        display: none;
+      }
 
     }
-  
 
-    &__motto{
-        display: flex;
-        flex-direction: row;
-        color: white;
-        position: absolute;
-        left: 20rem;
-        bottom: 3rem;
-        transform: rotate(-3.5deg);
+
+
+  }
+
+
+  &__motto {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    position: absolute;
+    left: 13rem;
+    bottom: 3rem;
+    transform: rotate(-3.5deg);
+
+    @include respond(tab-port) {
+      display: none;
+    }
+    @include respond(tab-land) {
+      left: 22%;
     }
 
- 
+    @include respond(big-desktop) {
+      left: 20rem;
+    }
+
+  }
+
+
 
 }
 
 .waviy {
-    position: relative;
-    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
-    font-size: 4rem;
-    margin-left: 4rem;
-    transform: translateY(-50px);
+  position: relative;
+  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, .2));
+  font-size: 3rem;
+  margin-left: 2rem;
+  transform: translateY(-3rem);
+
+  @include respond(tab-port) {
+    font-size: 1rem;
+  }
+  @include respond(tab-land) {
+    font-size: 2.5rem;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 3.5rem;
+  }
+
   span {
     font-family: $font-family-secondary;
     position: relative;
@@ -94,8 +179,7 @@
     color: #fff;
     animation: waviy 2s infinite;
     animation-delay: calc(0.1s * var(--i));
-    
+
   }
 
 }
-  
